# hierarchical_review_plots

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: actions.yml
hierarchical_review_plots/: __init__.py  heat_map_consistent_altair.py  polar_bar_plotly.py  tilt_ppda_and_build_up_disruption_altair.py  weighted_xg_plotly.py
static/: larga_player.csv  played_minutes.csv  weighted_g_and_xg_94.csv  xG_build-up_ppda_tilt_94.csv
streamlit_nies/: __init__.py  heat_map_consistent_altair.py  polar_bar_plotly.py
tests/: test_transformations.py
